--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,6 +6,7 @@
     <title>Saish Software Solutions</title>
   </head>
   <body>
+    <app-navbar></app-navbar>
     <section class="hero animate-element">
       <h1 class="animate__animated animate__fadeInUp">
         Welcome to Saish Software Solutions
