--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,7 @@
         Welcome to Saish Software Solutions
       </h1>
       <h6 class="animate__animated animate__fadeInLeft">Digital Solutions to Your Needs</h6>
-      <p class="animate__animated animate__fadeInRight">
+      <p class="animate__animated animate__fadeInLeft">
         Your partner in innovative software development.
       </p>
     </section>
