--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,11 +1,10 @@
 .about {
-
   min-width: 350px;
   font-family: "Trirong", serif;
   margin: auto;
   padding: 25px;
   text-align: center;
-  margin-bottom: 415px;
+  margin-bottom: 54vh;
 }
 .aboutus{
   padding: 25px;
