--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -15,7 +15,7 @@
           <p><mat-icon> email</mat-icon>{{email}}</p>
           <p><mat-icon> business</mat-icon>Mumbai, Maharastra, India</p>
         </div>
-        <div class="contact-form animate__animated animate__fadeInRight">
+        <div class="contact-form animate__animated animate__fadeInUp">
           <h3>Get in touch</h3>
           <form action="https://api.web3forms.com/submit" method="POST">
             <input type="hidden" name="access_key" value="7e29e32d-4389-4048-95e4-d15317816d29">
