--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,22 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-<body>
+<header>  
   <mat-toolbar class="navbar">
-    <div>
-      <mat-icon>grain</mat-icon>
-    </div>
-    <div class="company-name">
-      <h1>Saish Software Solutions</h1>
-      <div class="tagline">Digital Solutions to Your Need</div>
-    </div>
-    <div class="spacer menu">
-      <a mat-button routerLink="home">Home</a>
-      <a mat-button routerLink="services">Services</a>
-      <a mat-button routerLink="about">About Us</a>
-      <a mat-button routerLink="contact">Contact Us</a>
-      <a mat-button routerLink="careers">Careers</a>
-    </div>
-  </mat-toolbar>
+  <div>
+    <mat-icon>grain</mat-icon>
+  </div>
+  <div class="company-name">
+    <h1>Saish Software Solutions</h1>
+    <div class="tagline">Digital Solutions to Your Need</div>
+  </div>
+  <div class="toggle">
+  <div class="spacer menu">
+    <a mat-button routerLink="home">Home</a>
+    <a mat-button routerLink="services">Services</a>
+    <a mat-button routerLink="about">About Us</a>
+    <a mat-button routerLink="contact">Contact Us</a>
+    <a mat-button routerLink="careers">Careers</a>
+  </div>
+</div>
+</mat-toolbar></header>
+<body>
 </body>
 </html>
