--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <mat-toolbar class="navbar">
-    <div>
-      <mat-icon>grain</mat-icon>
-    </div>
-    <div class="company-name">
-      <h1>Saish Software Solutions</h1>
-      <div class="tagline">Digital Solutions to Your Need</div>
-    </div>
-    <div class="spacer menu">
-      <a mat-button routerLink="home">Home</a>
-      <a mat-button routerLink="services">Services</a>
-      <a mat-button routerLink="about">About Us</a>
-      <a mat-button routerLink="contact">Contact Us</a>
-      <a mat-button routerLink="careers">Careers</a>
-    </div>
-  </mat-toolbar>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <header>
+    <mat-toolbar class="navbar">
+      <div>
+        <mat-icon>grain</mat-icon>
+      </div>
+      <div class="company-name">
+        <h1>Saish Software Solutions</h1>
+        <div class="tagline">Digital Solutions to Your Need</div>
+      </div>
+      <div class="menu">
+        <div class="spacer">
+          <a mat-button routerLink="home">Home</a>
+          <a mat-button routerLink="services">Services</a>
+          <a mat-button routerLink="about">About Us</a>
+          <a mat-button routerLink="contact">Contact Us</a>
+          <a mat-button routerLink="careers">Careers</a>
+        </div>
+      </div>
+    </mat-toolbar>
+  </header>
+  <body></body>
 </html>
