--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,7 +6,9 @@
   </head>
   <body>
     <section class="about">
-      <div class="aboutus"><h2><b>About Us</b></h2></div>
+      <div class="aboutus">
+        <h2><b>About Us</b></h2>
+      </div>
       <div class="aboutcontainer">
         <p>
           Saish Software Solutions provides a full range of solutions including
