--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -18,7 +18,7 @@
   margin: auto;
   font-size: 2.5em;
 }
-.hero h6{
+.hero h6 {
   margin: auto;
   font-family: "Trirong", serif;
 }
@@ -63,7 +63,9 @@ html {
   transform: scale(1.1);
 }
 @media (max-width: 768px) {
-  .hero{
+  .hero {
+    background-repeat: repeat;
     background-image: url("../../assets/homebg2.jpg");
+    padding-top: 25px;
   }
 }
